# YtStats

./: .gitattributes  .gitignore  CMakeLists.txt  Main.qml  README.md  index.html  main.cpp
githubPages/: appYtStats.html  appYtStats.js  appYtStats.worker.js  server.py
modules/Channel/: Channel.cpp  Channel.hpp
modules/FileLoader/: FileLoader.cpp  FileLoader.hpp  FileLoaderBtn.qml
modules/History/: History.cpp  History.hpp
modules/Parser/: ISerializable.hpp  ISerializerVisitor.hpp
modules/Parser/Json/: JsonSerializerVisitor.cpp  JsonSerializerVisitor.hpp
modules/Video/: Video.hpp
